package figure;

import util.Cell;

import java.util.List;

public class Bishop extends Figure {
    @Override
    public List<Cell> getAvailableMoves(Cell currentCell) {
        return null;
    }
}
