package figure;

import util.Cell;

import java.util.List;

public class King extends Figure {
    @Override
    public List<Cell> getAvailableMoves(Cell currentCell) {
        return List.of();
    }
}
