package util;

import figure.Figure;

public class Cell {
    private int x;
    private int y;
    private Figure figure;
}
