package util;

public enum Color {
    WHITE,
    BLACK;
}
