package util;

public enum GameEnding {
    WHITE_WIN,
    BLACK_WIN,
    DRAW;
}
