package util;

public class Move {
    Cell from;
    Cell to;
    GameEnding endingProposition;
}
